5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1674_1879.log
== TEST (2019-05-02 01:21:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h= (x-1/4)*y 
print(h)
-- OUTPUT:
420.0 extras e 20.0 de falta
8395.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:22:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h= x-1/4*y 
print(h)
-- OUTPUT:
420.0 extras e 20.0 de falta
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:22:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h= x-(1/4*y) 
print(h)
-- OUTPUT:
420.0 extras e 20.0 de falta
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:26:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = 400-1/4
print(h)
-- OUTPUT:
420.0 extras e 20.0 de falta
399.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:27:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = 400-1/4*y
print(h)
-- OUTPUT:
420.0 extras e 20.0 de falta
395.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:33:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

if(x<40.0):
	g = 500
elif:(x<=40.0):
	g = 100
else:
	g = "Dados invalidos"
print("R$",g)
	
-- ERROR:
File "XXXX", line 10
    elif:(x<=40.0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:33:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

if(x<40.0):
	g = 500
elif(x<=40.0):
	g = 100
else:
	g = "Dados invalidos"
print("R$",g)
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:34:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

if(x>40.0):
	g = 500
elif(x<=40.0):
	g = 100
else:
	g = "Dados invalidos"
print("R$",g)
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:34:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

if(x>40.0):
	g = 500
elif(x<=40.0):
	g = 100
else:
	g = "Dados invalidos"
print("R$",g)
	
-- EXECUTION TIME:
0.28849
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 500
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:35:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

if(x>400):
	g = 500
elif(x<=400):
	g = 100
else:
	g = "Dados invalidos"
print("R$",g)
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:35:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

if(x>400):
	g = 500
elif(x<=400):
	g = 100
else:
	g = "Dados invalidos"
print("R$",g)
	
-- EXECUTION TIME:
0.165439
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:51:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x-(1/4*y)

if(x>400):
	g = 500
elif(x<=400):
	g = 100
print("R$",g)
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:53:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x-(1/4*y)

if(x>400):
	g = float(500)
elif(x<=400):
	g = float(100)
print("R$",g)
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:53:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x-(1/4*y)

if(x>400):
	g = float(500)
elif(x<=400):
	g = float(100)
print("R$",g)
	
-- EXECUTION TIME:
0.167715
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:55:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x-(1/4*y)

if(x>400):
	g = 500
	print("R$",round(g))
elif(x<=400):
	g = 100
print("R$",round(g))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:55:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x-(1/4*y)

if(x>400):
	g = 500
	print("R$",round(g, 2))
elif(x<=400):
	g = 100
print("R$",round(g, 2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:56:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x-(1/4*y)

if(x>400):
	g = 500
	print("R$",round(g,2))
elif(x<=400):
	g = 100
print("R$",round(g,2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:56:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x-(1/4*y)

if(x>400):
	g = 500.0
	print("R$",round(g,2))
elif(x<=400):
	g = 100.0
print("R$",round(g,2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 08:57:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x-(1/4*y)

if(x>400):
	g = 500.0
	print("R$",round(g,2))
elif(x<=400):
	g = 100.0
print("R$",round(g,2))
	
-- EXECUTION TIME:
0.140582
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:58:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x -(1/4 * y )

if(x > 400):
	g = 500.0
	print("R$",round(g,2))
elif(x <= 400):
	g = 100.0
print("R$",round(g,2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 08:59:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x -(1/4 * y )

if(x > 400):
	g = 500.0
	print("R$",round(g,2))
elif(x <= 400):
	g = 100.0
print("R$",round(g,2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:00:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x -(1/4 * y )

if(x > 400):
	g = 500.0
	print("R$",round(g,2))
elif(x <= 400):
	g = 100.0
	print("R$",round(g,2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:01:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x -(1/4 * y )

if(x > 400):
	g = 500.0
	print("R$",round(g,2))
elif(x <= 400):
	g = 100.0
	print("R$",round(g,2))
	
-- EXECUTION TIME:
0.182334
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:01:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x -(1/4 * y )

if(x > 400):
	g = 500.0
	print("R$",round(g,2))
elif(x <= 400):
	g = 100.0
	print("R$",round(g,2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:01:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x -(1/4 * y )

if(x > 400):
	g = 500.0
	print("R$",round(g,2))
elif(x <= 400):
	g = 100.0
	print("R$",round(g,2))
	
-- EXECUTION TIME:
0.175423
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:27:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x -(1/4 * y )

if(x <= 400):
	g = 100.0
	print("R$",round(g,2))
elif(x > 400):
	g = 500.0
	print("R$",round(g,2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:28:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de faltas em horas: "))


print(x,"extras e",y,"de falta")

h = x -(1/4 * y )

if(x <= 400):
	g = 100.0
	print("R$",round(g,2))
elif(x > 400):
	g = 500.0
	print("R$",round(g,2))
	
-- EXECUTION TIME:
0.16307
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 500.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:32:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("numero de horas extras: "))
f = float(input("numero de faltas em horas: "))


print(e,"extras e",f,"de falta")

h = e -(1/4 * f)

if(h <= 400):
	g = 100.0
	print("R$",round(g,2))
elif(h > 400):
	g = 500.0
	print("R$",round(g,2))
	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:32:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
e = float(input("numero de horas extras: "))
f = float(input("numero de faltas em horas: "))


print(e,"extras e",f,"de falta")

h = e -(1/4 * f)

if(h <= 400):
	g = 100.0
	print("R$",round(g,2))
elif(h > 400):
	g = 500.0
	print("R$",round(g,2))
	
-- EXECUTION TIME:
0.189115
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
